News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/CyberAd_User_Credential__c.object-meta.xml
<CustomObject>
    <description>External System User Credentials</description>
    <label>External System User Credential</label>
    <nameField>
        <displayFormat>CyberAdCredential-{00000}</displayFormat>
        <label>CyberAd User Credential Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External System User Credentials</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>