News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/fields/AdPoint_User_Id__c.field-meta.xml
<CustomField>
    <fullName>AdPoint_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>AdPoint User Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>