News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/fields/Create_GBA_Types__c.field-meta.xml
<CustomField>
    <fullName>Create_GBA_Types__c</fullName>
    <label>Create GBA Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>NFSS</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>