News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/fields/CyberAd_Password__c.field-meta.xml
<CustomField>
    <fullName>CyberAd_Password__c</fullName>
    <description>CyberAd User&#39;s Password</description>
    <label>CyberAd Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>