News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/fields/CyberAd_Username__c.field-meta.xml
<CustomField>
    <fullName>CyberAd_Username__c</fullName>
    <label>CyberAd Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>