News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/fields/CyberSell_Divisions__c.field-meta.xml
<CustomField>
    <fullName>CyberSell_Divisions__c</fullName>
    <label>CyberSell Divisions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NMG</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>DBL</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>MNG</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>QNP</fullName>
            </value>
            <value>
                <fullName>NWN</fullName>
            </value>
            <value>
                <fullName>QST</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>HWT</fullName>
            </value>
            <value>
                <fullName>ADN</fullName>
            </value>
            <value>
                <fullName>LDR</fullName>
            </value>
            <value>
                <fullName>NQN</fullName>
            </value>
            <value>
                <fullName>NTN</fullName>
            </value>
            <value>
                <fullName>GAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>