News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/fields/Database__c.field-meta.xml
<CustomField>
    <fullName>Database__c</fullName>
    <label>Database</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADV-CGSPRD</fullName>
            </value>
            <value>
                <fullName>ADVTR1</fullName>
            </value>
            <value>
                <fullName>CNGCGS</fullName>
            </value>
            <value>
                <fullName>CNGCGT</fullName>
            </value>
            <value>
                <fullName>CNS_CGSHOST</fullName>
            </value>
            <value>
                <fullName>CNS_CGSTEST</fullName>
            </value>
            <value>
                <fullName>GAD_CGSHOST</fullName>
            </value>
            <value>
                <fullName>GAD_CGSTest</fullName>
            </value>
            <value>
                <fullName>GCP_CGSHOST</fullName>
            </value>
            <value>
                <fullName>GCP_CGSTEST</fullName>
            </value>
            <value>
                <fullName>HWT_CGSHOST</fullName>
            </value>
            <value>
                <fullName>HWT_CGSTEST</fullName>
            </value>
            <value>
                <fullName>LDR_CGSHOST</fullName>
            </value>
            <value>
                <fullName>LDR_CGSTEST</fullName>
            </value>
            <value>
                <fullName>MNG-CGSPRD</fullName>
            </value>
            <value>
                <fullName>MNGTR1</fullName>
            </value>
            <value>
                <fullName>NQN_CGSHOST</fullName>
            </value>
            <value>
                <fullName>NQN_CGSTEST</fullName>
            </value>
            <value>
                <fullName>NWNCGS</fullName>
            </value>
            <value>
                <fullName>NWNCGT</fullName>
            </value>
            <value>
                <fullName>QNP_CGSHOST</fullName>
            </value>
            <value>
                <fullName>QNP_CGSTEST</fullName>
            </value>
            <value>
                <fullName>QST_CGSHOST</fullName>
            </value>
            <value>
                <fullName>QST_CGSTEST</fullName>
            </value>
            <value>
                <fullName>SDTDR1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>