News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/fields/Login_Access__c.field-meta.xml
<CustomField>
    <fullName>Login_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All users will have a User Account in Adpoint - but only some will be able to log in to Adpoint (and make Bookings).

This field marks those users. Used in Booking UI for access control Adpoint Bookings.</description>
    <inlineHelpText>Tick if this User has login access to Adpoint. It will also allow this User to make Adpoint Bookings.</inlineHelpText>
    <label>Adpoint Login Access</label>
    <type>Checkbox</type>
</CustomField>