News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <label>Publication</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>LDR</fullName>
                <color>#33CCFF</color>
                <label>LDR</label>
            </value>
            <value>
                <fullName>DHS</fullName>
                <color>#0B6FCE</color>
                <label>DHS</label>
            </value>
            <value>
                <fullName>ADV</fullName>
                <color>#FF0000</color>
                <label>ADV</label>
            </value>
            <value>
                <fullName>SHS</fullName>
                <color>#3333FF</color>
                <label>SHS</label>
            </value>
            <value>
                <fullName>AUS</fullName>
                <color>#F3D904</color>
                <label>AUS</label>
            </value>
            <value>
                <fullName>DTM</fullName>
                <color>#FF6666</color>
                <label>DTM</label>
            </value>
            <value>
                <fullName>CNG</fullName>
                <color>#66E9BD</color>
                <label>CNG</label>
            </value>
            <value>
                <fullName>GCP</fullName>
                <color>#FF9966</color>
                <label>GCP</label>
            </value>
            <value>
                <fullName>QST</fullName>
                <color>#FF6600</color>
                <label>QST</label>
            </value>
            <value>
                <fullName>SSS</fullName>
                <color>#E27001</color>
                <label>SSS</label>
            </value>
            <value>
                <fullName>TRN</fullName>
                <color>#AFCADF</color>
                <label>TRN</label>
            </value>
            <value>
                <fullName>ANN</fullName>
            </value>
            <value>
                <fullName>SUN</fullName>
            </value>
            <value>
                <fullName>GNE</fullName>
            </value>
            <value>
                <fullName>ECH</fullName>
            </value>
            <value>
                <fullName>MAG</fullName>
            </value>
            <value>
                <fullName>QTR</fullName>
            </value>
            <value>
                <fullName>AFC</fullName>
            </value>
            <value>
                <fullName>GTO</fullName>
                <color>#0B24BE</color>
                <label>GTO</label>
            </value>
            <value>
                <fullName>GAT</fullName>
                <color>#2F5D85</color>
                <label>GAT</label>
            </value>
            <value>
                <fullName>CTY</fullName>
            </value>
            <value>
                <fullName>ECO</fullName>
            </value>
            <value>
                <fullName>GAR</fullName>
            </value>
            <value>
                <fullName>HIL</fullName>
            </value>
            <value>
                <fullName>NME</fullName>
            </value>
            <value>
                <fullName>PAY</fullName>
            </value>
            <value>
                <fullName>PRT</fullName>
            </value>
            <value>
                <fullName>STD</fullName>
            </value>
            <value>
                <fullName>STH</fullName>
            </value>
            <value>
                <fullName>WKT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>