News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/recordTypes/AdPoint.recordType-meta.xml
<RecordType>
    <fullName>AdPoint</fullName>
    <active>true</active>
    <description>AdPoint User Credentials</description>
    <label>AdPoint</label>
</RecordType>