News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/recordTypes/CyberAd.recordType-meta.xml
<RecordType>
    <fullName>CyberAd</fullName>
    <active>true</active>
    <description>CyberAd user Credentials</description>
    <label>CyberAd</label>
</RecordType>