News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/recordTypes/CyberSell.recordType-meta.xml
<RecordType>
    <fullName>CyberSell</fullName>
    <active>true</active>
    <description>Cyber$ell user division details</description>
    <label>Cyber$ell</label>
</RecordType>