News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/validationRules/AdPoint_UserId_For_AdPoint_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>AdPoint_UserId_For_AdPoint_Record_Type</fullName>
    <active>true</active>
    <description>To prevent user from providing AdPoint user id for non AdPoint system.</description>
    <errorConditionFormula>And( 
NOT(RecordType.DeveloperName = &#39;AdPoint&#39;), 
NOT( ISBLANK( AdPoint_User_Id__c ) )
)</errorConditionFormula>
    <errorMessage>AdPoint user id is only for AdPoint system.</errorMessage>
</ValidationRule>