News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/listViews/All_User_Credentials.listView-meta.xml
<ListView>
    <fullName>All_User_Credentials</fullName>
    <columns>User__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CyberAd_Username__c</columns>
    <columns>Database__c</columns>
    <columns>Division__c</columns>
    <columns>Login_Access__c</columns>
    <columns>AdPoint_User_Id__c</columns>
    <columns>Publication__c</columns>
    <columns>CyberSell_Divisions__c</columns>
    <columns>Create_GBA_Types__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All User Credentials</label>
</ListView>