News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/listViews/All_User_Credentials_CyberSell.listView-meta.xml
<ListView>
    <fullName>All_User_Credentials_CyberSell</fullName>
    <columns>User__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CyberSell_Divisions__c</columns>
    <columns>Create_GBA_Types__c</columns>
    <columns>Login_Access__c</columns>
    <columns>AdPoint_User_Id__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CyberAd_User_Credential__c.CyberSell</value>
    </filters>
    <label>All User Credentials (Cyber$ell)</label>
</ListView>