News UAT/force-app/main/default/objects/CyberAd_User_Credential__c/listViews/nsw_CyberAd_Login_Details.listView-meta.xml
<ListView>
    <fullName>nsw_CyberAd_Login_Details</fullName>
    <columns>User__c</columns>
    <columns>Active__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>CyberAd_Password__c</columns>
    <columns>CyberAd_Username__c</columns>
    <columns>CyberSell_Divisions__c</columns>
    <columns>Database__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>NWN,CNG,DBL</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>NSW CyberAd Login Details</label>
    <sharedTo>
        <roleAndSubordinates>DBL_Classifieds_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>